<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pollito"
    android:fitsSystemWindows="true"
    android:gravity="bottom|center"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btnPlay"
        style="@style/BotonPrincipal"
        android:layout_marginBottom="12dp"
        android:drawableRight="@android:drawable/ic_media_play"
        android:text="@string/play" />

    <Button
        android:id="@+id/btnShare"
        style="@style/BotonPrincipal"
        android:layout_marginBottom="12dp"
        android:drawableRight="@android:drawable/ic_menu_share"
        android:text="@string/share" />

    <Button
        android:id="@+id/btnWallpaper"
        style="@style/BotonPrincipal"
        android:layout_marginBottom="12dp"
        android:drawableRight="@android:drawable/ic_menu_set_as"
        android:text="@string/wall" />

    <Button
        android:id="@+id/btnTono"
        style="@style/BotonPrincipal"
        android:layout_marginBottom="12dp"
        android:drawableRight="@android:drawable/ic_lock_silent_mode_off"
        android:text="@string/ringtone" />

    <Button
        android:id="@+id/btnPequeLetras"
        style="@style/BotonPrincipal"
        android:layout_marginBottom="48dp"
        android:drawableRight="@android:drawable/ic_menu_add"
        android:text="@string/pequeletras" />

</LinearLayout>
